# libpff

./: .gitignore  README  build.ps1  configure.ac  cspell.config.yaml  pyproject.toml  setup.sh  synclibs.sh  synctestdata.ps1  synctestdata.sh  taskfile.yaml  tox.ini
.github/: dependabot.yml
.github/config/: libpff.dict
.github/workflows/: build.yml
