[project]
name = "libpff-python"
version = "20240826"
description = "Python bindings module for libpff"
readme = "Python bindings module for libpff"
authors = [{name = "Joachim Metz", email = "joachim.metz@gmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pypff"]

[tool.uv]
managed = true
dev-dependencies = [
    "build>=1.2.2.post1",
    "cython>=3.0.11",
    "mypy>=1.4.1",
    "ninja>=1.11.1.3",
    "pylint>=2.13.9",
    "pytest>=7.4.4",
    "pyyaml>=6.0.2",
    "ruff>=0.8.6",
    "setuptools>=68.0.0",
    "tox>=4.23.2",
    "tox-uv>=1.17.0",
    "twine>=6.0.1",
    "wheel>=0.45.1",
]

[tool.uv.pip]
universal = true
